<resources>
    <string name="app_name">땅땅땅</string>
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_search">검색</string>
    <string name="bottom_navigation_message">쪽지</string>
    <string name="bottom_navigation_my_page">마이페이지</string>
    <string name="all_current_price">현재가</string>
    <string name="all_start_price">시작가</string>
    <string name="all_winning_bid_price">낙찰가</string>
    <string name="all_auction_unbidden">입찰전</string>
    <string name="all_auction_ongoing">경매중</string>
    <string name="all_auction_success">낙찰 완료</string>
    <string name="all_auction_failure">경매 유찰</string>
    <string name="all_app_bar_back_key_description">뒤로가기 버튼</string>
    <string name="all_app_bar_close_description">닫기 버튼</string>
    <string name="all_dialog_default_negative_button">취소</string>
    <string name="all_dialog_default_positive_button">확인</string>
    <string name="all_snackbar_default_action">확인</string>
    <string name="all_logo_description">땅땅땅 로고</string>
    <string name="all_profile_image_description">프로필 사진</string>
    <string name="all_reliability_icon_description">유저 신뢰도</string>
    <string name="all_reliability">(%.1f)</string>
    <string name="all_network_error_message">인터넷이 연결되어 있는지 확인해주세요.</string>
    <string name="all_unexpected_error_message">예기치 못한 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="all_must_update_to_latest_version">최신 버전으로 업데이트가 필요합니다.</string>
    <string name="all_date_format">yyyy년 M월 d일</string>
    <string name="all_time_format">h:mm a</string>
    <string name="all_date_time_format">yyyy-MM-dd\nHH:mm:ss</string>
    <string name="all_default_reliability">( - )</string>
    <string name="all_back_key_check_message">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다</string>
    <string name="all_price">%,d 원</string>
    <string name="splash_app_update_request_dialog_title">업데이트 알림</string>
    <string name="splash_app_update_request_dialog_message">더 새로워진 땅땅땅을 준비했습니다!\n업데이트 부탁드립니다!</string>
    <string name="splash_app_update_denied">업데이트를 해주셔야 서비스를 정상 사용가능합니다.</string>
    <string name="splash_app_default_error_message">땅땅땅을 실행하는데 실패했습니다.\n문제가 지속되는 경우, 문의해주세요!</string>
    <string name="home">경매 상품 목록</string>
    <string name="home_filter_new">최신순</string>
    <string name="home_filter_auctioneer">참여 인원순</string>
    <string name="home_filter_closing_time">마감 임박순</string>
    <string name="home_filter_reliability">신뢰도순</string>
    <string name="home_auction_image_description">경매 상품 대표 이미지</string>
    <string name="home_auction_price">%,d원</string>
    <string name="home_auctioneer_count">(%d)</string>
    <string name="home_auctioneer_count_description">경매 참여 인원수</string>
    <string name="home_register_auction_button_description">경매 등록 페이지로 이동하는 버튼</string>
    <string name="home_default_error_message">경매 목록을 성공적으로 불러오지 못했습니다.</string>
    <string name="detail_auctioneer_count_icon_description">경매 참여자 수</string>
    <string name="detail_seller_profile_description">유저 프로필</string>
    <string name="detail_auction_submit">입찰하기</string>
    <string name="detail_auction_finish">경매 마감</string>
    <string name="detail_auction_chat_room_create">쪽지방 생성</string>
    <string name="detail_auction_chat_room_entrance">쪽지방 입장</string>
    <string name="detail_auction_my_auction">내꺼 입찰금지</string>
    <string name="detail_auction_already_last_bidder">현재까지 최고입찰자</string>
    <string name="detail_auction_category">%s > %s</string>
    <string name="detail_auction_price_status">%s %,d원</string>
    <string name="detail_auction_start_price">시작가 %,d원</string>
    <string name="detail_auction_remain_time">%s</string>
    <string name="detail_auction_remain_time_finish">마감</string>
    <string name="detail_auction_auctioneer_count">%d명 경매 참여중</string>
    <string name="detail_auction_dialog_auction_does_not_exist_message">존재하지 않는 경매입니다.</string>
    <string name="detail_auction_delete_failure">게시글을 삭제하는데 실패했습니다</string>
    <string name="detail_auction_load_failure">게시글을 불러오는데 실패했습니다</string>
    <string name="detail_auction_enter_chat_room_failure">채팅방에 입장하는데 실패했습니다</string>
    <string name="detail_auction_bid_history_price_format">%,d원</string>
    <string name="detail_auction_bid_history_load_failure">경매 입찰 내역을 불러오는데 실패했습니다</string>
    <string name="detail_auction_bid_history_no_exist">경매 입찰 내역이 존재하지 않습니다</string>
    <string name="detail_auction_info_title">상품 정보</string>
    <string name="detail_auction_info_description">상품 설명</string>
    <string name="detail_auction_info_direct_exchange_regions_description">직거래 가능 지역</string>
    <string name="detail_auction_info_seller_info">판매자 정보</string>
    <string name="detail_auction_qna_title">Q&amp;A</string>
    <string name="detail_auction_qna_seller_answer_title">판매자 답변</string>
    <string name="detail_auction_qna_no_answer">아직 작성된 답변이 없습니다.</string>
    <string name="detail_auction_qna_question_write">질문하기</string>
    <string name="detail_auction_qna_answer_write">답변하기</string>
    <string name="detail_auction_qna_delete">삭제하기</string>
    <string name="detail_auction_qna_waiting">답변대기</string>
    <string name="detail_auction_qna_complete">답변완료</string>
    <string name="detail_auction_qna_question_prefix">Q. %s</string>
    <string name="detail_auction_qna_question_contents_hint">질문 내용을 입력해주세요.</string>
    <string name="detail_auction_qna_answer_contents_hint">답변 내용을 입력해주세요.</string>
    <string name="detail_auction_qna_question_register_failure">질문 등록에 실패했습니다.</string>
    <string name="detail_auction_qna_question_register_success">질문 등록에 성공했습니다.</string>
    <string name="detail_auction_qna_answer_register_failure">답변 등록에 실패했습니다.</string>
    <string name="detail_auction_qna_answer_register_success">답변 등록에 성공했습니다.</string>
    <string name="detail_auction_qna_loading_failure">Q&amp;A를 로딩하는데 실패했습니다. 다시 시도해주세요.</string>
    <string name="detail_auction_qna_question_delete_failure">질문 삭제를 실패했습니다. 다시 시도해주세요.</string>
    <string name="detail_auction_qna_answer_delete_failure">답변 삭제를 실패했습니다. 다시 시도해주세요.</string>
    <string name="detail_auction_qna_submit">등록</string>
    <string name="detail_auction_qna_no_exist">QnA가 존재하지 않습니다</string>
    <string name="detail_auction_bid_history">입찰 내역</string>
    <string name="detail_auction_bid_dialog_title">입찰하기</string>
    <string name="detail_auction_bid_dialog_unit_price">판매자가 설정한 경매 단위: %,d원</string>
    <string name="detail_auction_bid_dialog_cancel">취소</string>
    <string name="detail_auction_bid_dialog_submit">입찰</string>
    <string name="detail_auction_bid_dialog_success">%,d원에 입찰 성공!</string>
    <string name="detail_auction_bid_dialog_toast_under_price">더 높은 금액을 제시해주세요</string>
    <string name="detail_auction_bid_dialog_failure_default_message">경매 입찰에 실패했습니다\n잠시 후에 다시 시도해주세요</string>
    <string name="auction_detail_dialog_check_delete_message">정말로 이 경매를 삭제하시겠습니까?</string>
    <string name="auction_detail_delete_complete">삭제가 완료되었습니다.</string>
    <string name="register_auction">경매 상품 등록</string>
    <string name="register_auction_default_image_count">(%d/%d)</string>
    <string name="register_auction_necessary_introduce">* 는 필수입력 사항입니다.</string>
    <string name="register_auction_image">사진</string>
    <string name="register_auction_title">제목</string>
    <string name="register_auction_category">카테고리</string>
    <string name="register_auction_description">상품 설명</string>
    <string name="register_auction_start_price">경매 시작가</string>
    <string name="register_auction_start_price_hint">경매 시작가는 0원보다 커야 합니다</string>
    <string name="register_auction_closing_time">경매 마감 시간</string>
    <string name="register_auction_closing_time_hint">당일로부터 30일 이내까지 선택 가능합니다</string>
    <string name="register_auction_enable_direct_region">직거래 가능 지역</string>
    <string name="register_auction_image_url">이미지 주소</string>
    <string name="register_auction_bid_unit">경매 입찰 단위</string>
    <string name="register_auction_bid_unit_hint">100원 이상부터 100원 단위로 입력 가능합니다</string>
    <string name="register_auction_blank_exist_error">채우지 않은 필드가 존재합니다.</string>
    <string name="register_auction_invalid_input_error">필드에 유효하지 않은 값이 존재합니다.</string>
    <string name="register_auction_ok">확인</string>
    <string name="register_auction_image_description">경매에 등록할 사진</string>
    <string name="register_auction_delete_image_button_description">경매에 등록할 사진 삭제 버튼</string>
    <string name="register_auction_dialog_delete_image_message">사진을 삭제하시겠습니까?</string>
    <string name="register_auction_dialog_delete_image_positive_button">삭제</string>
    <string name="register_autcion_snackbar_image_limit">사진은 최대 10개까지 등록 가능합니다.</string>
    <string name="register_autcion_default_error_message">예기치 못한 오류로 인해 경매 등록에 실패했습니다.</string>
    <string name="select_category">카테고리 선택</string>
    <string name="select_direct_regions">직거래 가능 지역 선택</string>
    <string name="select_regions_first_title">시 • 도</string>
    <string name="select_regions_second_title">시 • 군 • 구</string>
    <string name="select_regions_third_title">동 • 읍 • 면</string>
    <string name="select_regions_submit">선택 완료</string>
    <string name="select_category_main_load_failure">메인 카테고리 정보를 불러오는데 실패했습니다</string>
    <string name="select_category_sub_load_failure">서브 카테고리 정보를 불러오는데 실패했습니다</string>
    <string name="select_regions_first_failure">시 • 도 정보를 불러오는데 실패했습니다</string>
    <string name="select_regions_second_failure">시 • 군 • 구 정보를 불러오는데 실패했습니다</string>
    <string name="select_regions_third_failure">동 • 읍 • 면 정보를 불러오는데 실패했습니다</string>
    <string name="login_kakao_login_button_description">카카오 로그인 버튼</string>
    <string name="login_snackbar_login_failed_title">로그인에 실패했습니다</string>
    <string name="message_profile_description">상대방 프로필입니다</string>
    <string name="message_not_exist_rooms">쪽지방이 존재하지 않습니다</string>
    <string name="message_rooms_load_failure">쪽지방 목록을 불러오는데 실패했습니다</string>
    <string name="message_rooms_maximum_unread_message_count">99</string>
    <string name="message_room_auction_item_description">경매 상품 이미지입니다</string>
    <string name="message_room_profile_description">쪽지 상대 프로필입니다</string>
    <string name="message_room_refresh_description">채팅 목록 갱신 버튼입니다</string>
    <string name="message_room_report_description">쪽지 상대 신고 버튼입니다</string>
    <string name="message_room_message_input_hint">메시지를 입력해주세요</string>
    <string name="message_room_message_submit">전송</string>
    <string name="message_room_load_room_info_failed">채팅방 정보를 불러오는데 실패했습니다\n잠시 후에 다시 시도해주세요</string>
    <string name="message_room_load_messages_failed">메시지 정보를 불러오는데 실패했습니다\n잠시 후에 다시 시도해주세요</string>
    <string name="message_room_send_message_failed">메시지 전송에 실패했습니다\n잠시 후에 다시 시도해주세요</string>
    <string name="message_room_created_introduce_text">쪽지방이 생성됐습니다.</string>
    <string name="message_room_auction_bid_price">%,d원</string>
    <string name="mypage">마이페이지</string>
    <string name="mypage_user_info_change_button">회원 정보 수정</string>
    <string name="report">신고하기</string>
    <string name="report_contents">신고 내용</string>
    <string name="report_submit">신고 접수하기</string>
    <string name="search">경매 상품 검색</string>
    <string name="search_keyword_hint">상품명 검색</string>
    <string name="search_keyword">검색</string>
    <string name="search_notice_no_auction">아이쿠! 올라온 경매가 없습니다!</string>
    <string name="profile_change">회원 정보 수정</string>
    <string name="profile_change_profile_image_button_description">회원 프로필 수정 버튼</string>
    <string name="profile_change_nickname">닉네임</string>
    <string name="profile_change_nickname_text_hint">닉네임은 25자 이내입니다.</string>
    <string name="profile_change_confirm">확인</string>
    <string name="my_auction_list_title">나의 경매 목록</string>
    <string name="my_auction_list_not_exist">등록한 경매 상품이 아직 없습니다</string>
    <string name="user_review">평가하기</string>
    <string name="user_review_description_satisfied">상대방과의 거래에 만족하셨나요?</string>
    <string name="user_review_submit">제출</string>
    <string name="user_review_detail_hint">거래 후기를 남겨주세요! (선택)</string>
</resources>