<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ddangddangddang.android.feature.messageRoom.review.UserReviewViewModel" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingBottom="12dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_begin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <TextView
                android:id="@+id/tv_review_title"
                style="@style/Header2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_review"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_begin"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description_satisfied"
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/user_review_description_satisfied"
                android:textColor="@color/grey_700"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintStart_toEndOf="@id/gl_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_review_title" />


            <RatingBar
                android:id="@+id/rb_review_grade"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:minHeight="0dp"
                android:numStars="5"
                android:rating="@={viewModel.ratingGrade}"
                android:stepSize="0.5"
                android:theme="@style/RatingBar"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintStart_toEndOf="@id/gl_begin"
                app:layout_constraintTop_toBottomOf="@id/tv_description_satisfied"
                tools:rating="3" />

            <EditText
                android:id="@+id/et_detail_description"
                style="@style/Body"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_stroke_gray_radius_1dp"
                android:gravity="top"
                android:hint="@string/user_review_detail_hint"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:text="@={viewModel.reviewDetailContent}"
                android:textCursorDrawable="@drawable/ic_edittext_cursor"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintStart_toEndOf="@id/gl_begin"
                app:layout_constraintTop_toBottomOf="@id/rb_review_grade" />

            <Button
                android:id="@+id/btn_review_cancel"
                style="@style/NegativeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/detail_auction_bid_dialog_cancel"
                android:textSize="@dimen/textsize_body"
                app:layout_constraintEnd_toStartOf="@id/btn_review_submit"
                app:layout_constraintTop_toBottomOf="@id/et_detail_description" />

            <Button
                android:id="@+id/btn_review_submit"
                style="@style/PositiveButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{() -> viewModel.submitReview()}"
                android:text="@string/user_review_submit"
                android:textSize="@dimen/textsize_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_detail_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>
