<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ddangddangddang.android.feature.myAuction.MyAuctionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.myAuction.MyAuctionActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_my_auction"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_side_layout"
                android:contentDescription="@string/all_app_bar_back_key_description"
                android:onClick="@{() -> viewModel.setExitEvent()}"
                android:src="@drawable/ic_left_24"
                app:tint="@color/grey_900" />

            <TextView
                style="@style/Header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side_layout"
                android:text="@string/my_auction_list_title" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            style="@style/Header2"
            isVisible="@{viewModel.isLast() &amp;&amp; (viewModel.auctions.size() == 0)}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/my_auction_list_not_exist"
            android:textColor="@color/grey_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_my_auction" />


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_reload_auctions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_my_auction">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_auction"
                isVisible="@{viewModel.auctions.size() != 0}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/item_home_auction" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
